--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Github Blog Cloudflare Worker",
   "main": "worker.js",
-  "repository": "github:adamsuk/blog-worker",
+  "repository": "https://github.com/adamsuk/blog-worker",
   "type": "module",
   "dependencies": {
     "@octokit/app": "^10.0.2",
