--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "dependencies": {
     "@octokit/app": "^10.0.2",
-    "@octokit/request": "^7.0.1"
+    "@octokit/request": "^7.0.1",
+    "yaml": "^2.3.2"
   },
   "release": {
     "branches": [
