--- a/.github/workflows/deploy-and-release.yml
+++ b/.github/workflows/deploy-and-release.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: node --version
       - run: npm install
-      - name: Publish
-        uses: cloudflare/wrangler-action@2.0.0
+      - name: Deploy
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
       - name: Release
