--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "blog-worker",
-  "version": "1.0.0",
   "private": true,
   "description": "Github Blog Cloudflare Worker",
   "main": "worker.js",
@@ -14,9 +13,18 @@
   "release": {
     "branches": [
       "main"
+    ],
+    "plugins": [
+      "@semantic-release/npm",
+      ["@semantic-release/git", {
+        "assets": ["package.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
+      }]
     ]
   },
   "devDependencies": {
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^11.0.0",
     "miniflare": "^2.14.0"
   }
 }
