--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^11.0.0",
-    "miniflare": "^2.14.0"
+    "miniflare": "^2.14.0",
+    "semantic-release": "^22.0.5",
+    "wrangler": "^3.15.0"
   },
-  "version": "0.3.3"
+  "scripts": {
+    "dev": "npx wrangler@beta dev"
+  }
 }
