fix(local-setup): enable out the box local dev without CORS issues + auto releases

--- a/.github/workflows/deploy-and-release.yml
+++ b/.github/workflows/deploy-and-release.yml
@@ -13,7 +13,9 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-      - run: node --version
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
       - run: npm install
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
