--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@octokit/request": "^7.0.1",
     "yaml": "^2.3.2"
   },
+  "engines": {
+    "npm": ">=10.0.0",
+    "node": ">=20.0.0"
+  },
   "release": {
     "branches": [
       "main"
     ],
     "plugins": [
       "@semantic-release/npm",
+      "@semantic-release/github",
       [
         "@semantic-release/git",
         {
@@ -24,12 +29,47 @@
           ],
           "message": "chore(release): ${nextRelease.version} [skip ci]"
         }
+      ],
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "angular",
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES",
+              "BREAKING"
+            ]
+          }
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "angular",
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES",
+              "BREAKING"
+            ]
+          },
+          "writerOpts": {
+            "commitsSort": [
+              "subject",
+              "scope"
+            ]
+          }
+        }
       ]
     ]
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^11.0.0",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.1",
     "@semantic-release/npm": "^11.0.0",
+    "@semantic-release/release-notes-generator": "^12.0.0",
     "miniflare": "^2.14.0",
     "semantic-release": "^22.0.5",
     "wrangler": "^3.13.2"
