fix(wrangler.toml): using .dev.env locally so can set prod values in vars

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,5 +6,5 @@ main = "worker.js"
 compatibility_date = "2020-12-17"
 node_compat = true
 
-[env.production.vars]
+[vars]
 UI_URL = "https://sradams.co.uk"
